--- a/1/index.html
+++ b/1/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,19 +8,43 @@
   <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
   <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
 </head>
-<body>  <!-- Section: Atom -->  <section class="stage" id="atom">
+<body>
+
+  <!-- Section: Atom -->
+  <section class="stage" id="atom">
     <video src="https://cdn.videvo.net/videvo_files/video/free/2020-12/large_watermarked/201111_01_Atom_4k_preview.mp4" autoplay muted loop playsinline></video>
-  </section>  <!-- Section: Cell -->  <section class="stage" id="cell">
+  </section>
+
+  <!-- Section: Cell -->
+  <section class="stage" id="cell">
     <img src="https://upload.wikimedia.org/wikipedia/commons/8/89/Cell_structure.svg" alt="Cell" />
-  </section>  <!-- Section: Bacteria -->  <section class="stage" id="bacteria">
+  </section>
+
+  <!-- Section: Bacteria -->
+  <section class="stage" id="bacteria">
     <video src="https://cdn.videvo.net/videvo_files/video/free/2021-01/large_watermarked/200619_Bacteria_01_preview.mp4" autoplay muted loop playsinline></video>
-  </section>  <!-- Section: Dust -->  <section class="stage" id="dust">
+  </section>
+
+  <!-- Section: Dust -->
+  <section class="stage" id="dust">
     <img src="https://cdn.pixabay.com/photo/2020/03/31/10/52/dust-4987365_1280.jpg" alt="Dust Particles" />
-  </section>  <!-- Section: Leaf -->  <section class="stage" id="leaf">
+  </section>
+
+  <!-- Section: Leaf -->
+  <section class="stage" id="leaf">
     <video src="https://cdn.videvo.net/videvo_files/video/free/2013-08/large_watermarked/hd0080_preview.mp4" autoplay muted loop playsinline></video>
-  </section>  <!-- Section: Tree -->  <section class="stage" id="tree">
+  </section>
+
+  <!-- Section: Tree -->
+  <section class="stage" id="tree">
     <img src="https://cdn.pixabay.com/photo/2016/11/29/05/08/tree-1869499_1280.jpg" alt="Tree" />
-  </section>  <!-- Section: Landscape -->  <section class="stage" id="landscape">
+  </section>
+
+  <!-- Section: Landscape -->
+  <section class="stage" id="landscape">
     <img src="https://cdn.pixabay.com/photo/2020/02/02/16/44/mountains-4813644_1280.jpg" alt="Landscape" />
-  </section>  <script src="animation.js"></script></body>
+  </section>
+
+  <script src="animation.js"></script>
+</body>
 </html>
