--- a/1/index.html
+++ b/1/index.html
@@ -1,50 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cinematic Scroll Zoom</title>
+  <title>Cinematic Evolution Scroll</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
   <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
 </head>
-<body>
-
-  <!-- Section: Atom -->
-  <section class="stage" id="atom">
-    <video src="https://cdn.videvo.net/videvo_files/video/free/2020-12/large_watermarked/201111_01_Atom_4k_preview.mp4" autoplay muted loop playsinline></video>
-  </section>
-
-  <!-- Section: Cell -->
-  <section class="stage" id="cell">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/8/89/Cell_structure.svg" alt="Cell" />
-  </section>
-
-  <!-- Section: Bacteria -->
-  <section class="stage" id="bacteria">
-    <video src="https://cdn.videvo.net/videvo_files/video/free/2021-01/large_watermarked/200619_Bacteria_01_preview.mp4" autoplay muted loop playsinline></video>
-  </section>
-
-  <!-- Section: Dust -->
-  <section class="stage" id="dust">
-    <img src="https://cdn.pixabay.com/photo/2020/03/31/10/52/dust-4987365_1280.jpg" alt="Dust Particles" />
-  </section>
-
-  <!-- Section: Leaf -->
-  <section class="stage" id="leaf">
-    <video src="https://cdn.videvo.net/videvo_files/video/free/2013-08/large_watermarked/hd0080_preview.mp4" autoplay muted loop playsinline></video>
-  </section>
-
-  <!-- Section: Tree -->
-  <section class="stage" id="tree">
-    <img src="https://cdn.pixabay.com/photo/2016/11/29/05/08/tree-1869499_1280.jpg" alt="Tree" />
-  </section>
-
-  <!-- Section: Landscape -->
-  <section class="stage" id="landscape">
-    <img src="https://cdn.pixabay.com/photo/2020/02/02/16/44/mountains-4813644_1280.jpg" alt="Landscape" />
-  </section>
-
-  <script src="animation.js"></script>
-</body>
+<body>  <header class="hero">
+    <h1>Journey Through Life</h1>
+    <p>From particles to paradise — a cinematic scroll experience</p>
+  </header>  <!-- Section: Atom -->  <section class="stage" id="atom">
+    <video src="https://www.videezy.com/system/resources/previews/000/050/719/original/Abstract_Particles_Background_1.mp4" autoplay muted loop playsinline></video>
+    <div class="caption">It all begins with atoms</div>
+  </section>  <!-- Section: Cell -->  <section class="stage" id="cell">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Eukaryotic_Cell.svg" alt="Cell" />
+    <div class="caption">Cells emerge and organize</div>
+  </section>  <!-- Section: Bacteria -->  <section class="stage" id="bacteria">
+    <video src="https://www.videezy.com/system/resources/previews/000/051/844/original/Bacteria_Background.mp4" autoplay muted loop playsinline></video>
+    <div class="caption">Life begins — meet the bacteria</div>
+  </section>  <!-- Section: Dust -->  <section class="stage" id="dust">
+    <img src="https://images.unsplash.com/photo-1505577058444-a3dab90d4253" alt="Dust Particles" />
+    <div class="caption">Dust to dust — particles drifting</div>
+  </section>  <!-- Section: Leaf -->  <section class="stage" id="leaf">
+    <video src="https://www.videezy.com/system/resources/previews/000/050/864/original/Leaves_Blown_by_Wind.mp4" autoplay muted loop playsinline></video>
+    <div class="caption">The rise of nature — leaves in flight</div>
+  </section>  <!-- Section: Tree -->  <section class="stage" id="tree">
+    <img src="https://images.unsplash.com/photo-1506765515384-028b60a970df" alt="Tree" />
+    <div class="caption">From a seed, a tree grows</div>
+  </section>  <!-- Section: Landscape -->  <section class="stage" id="landscape">
+    <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470" alt="Landscape" />
+    <div class="caption">The whole view — life in full</div>
+  </section>  <footer class="footer">
+    <p>Created by Montamap Studio • Explore. Evolve. Experience.</p>
+  </footer>  <script src="animation.js"></script></body>
 </html>
