--- a/1/index.html
+++ b/1/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -8,31 +7,58 @@
   <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
   <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
 </head>
-<body>  <header class="hero">
+<body>
+  <header class="hero">
     <h1>Journey Through Life</h1>
     <p>From particles to paradise — a cinematic scroll experience</p>
-  </header>  <!-- Section: Atom -->  <section class="stage" id="atom">
+  </header>
+
+  <!-- Section: Atom -->
+  <section class="stage" id="atom">
     <video src="https://www.videezy.com/system/resources/previews/000/050/719/original/Abstract_Particles_Background_1.mp4" autoplay muted loop playsinline></video>
     <div class="caption">It all begins with atoms</div>
-  </section>  <!-- Section: Cell -->  <section class="stage" id="cell">
+  </section>
+
+  <!-- Section: Cell -->
+  <section class="stage" id="cell">
     <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Eukaryotic_Cell.svg" alt="Cell" />
     <div class="caption">Cells emerge and organize</div>
-  </section>  <!-- Section: Bacteria -->  <section class="stage" id="bacteria">
-    <video src="https://www.videezy.com/system/resources/previews/000/051/844/original/Bacteria_Background.mp4" autoplay muted loop playsinline></video>
+  </section>
+
+  <!-- Section: Bacteria (fixed to image) -->
+  <section class="stage" id="bacteria">
+    <img src="https://images.unsplash.com/photo-1581092334703-bc7b352eadd5" alt="Bacteria" />
     <div class="caption">Life begins — meet the bacteria</div>
-  </section>  <!-- Section: Dust -->  <section class="stage" id="dust">
+  </section>
+
+  <!-- Section: Dust -->
+  <section class="stage" id="dust">
     <img src="https://images.unsplash.com/photo-1505577058444-a3dab90d4253" alt="Dust Particles" />
     <div class="caption">Dust to dust — particles drifting</div>
-  </section>  <!-- Section: Leaf -->  <section class="stage" id="leaf">
-    <video src="https://www.videezy.com/system/resources/previews/000/050/864/original/Leaves_Blown_by_Wind.mp4" autoplay muted loop playsinline></video>
+  </section>
+
+  <!-- Section: Leaf (now image) -->
+  <section class="stage" id="leaf">
+    <img src="https://images.unsplash.com/photo-1501004318641-b39e6451bec6" alt="Leaves Blowing in Wind" />
     <div class="caption">The rise of nature — leaves in flight</div>
-  </section>  <!-- Section: Tree -->  <section class="stage" id="tree">
+  </section>
+
+  <!-- Section: Tree -->
+  <section class="stage" id="tree">
     <img src="https://images.unsplash.com/photo-1506765515384-028b60a970df" alt="Tree" />
     <div class="caption">From a seed, a tree grows</div>
-  </section>  <!-- Section: Landscape -->  <section class="stage" id="landscape">
+  </section>
+
+  <!-- Section: Landscape -->
+  <section class="stage" id="landscape">
     <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470" alt="Landscape" />
     <div class="caption">The whole view — life in full</div>
-  </section>  <footer class="footer">
+  </section>
+
+  <footer class="footer">
     <p>Created by Montamap Studio • Explore. Evolve. Experience.</p>
-  </footer>  <script src="animation.js"></script></body>
+  </footer>
+
+  <script src="animation.js"></script>
+</body>
 </html>
