--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </script>
 
   <!-- CSS & Icons -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="test.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 
