--- a/index.html
+++ b/index.html
@@ -509,15 +509,8 @@
 
   </footer>
 
-  <!-- <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> -->
-
-<script src="https://unpkg.com/three@0.155.0/build/three.min.js"></script>
-<script src="https://unpkg.com/three@0.155.0/examples/js/postprocessing/EffectComposer.js"></script>
-<script src="https://unpkg.com/three@0.155.0/examples/js/postprocessing/RenderPass.js"></script>
-<script src="https://unpkg.com/three@0.155.0/examples/js/postprocessing/UnrealBloomPass.js"></script>
-
-  
-  <script src="test.js"></script>
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src="script.js"></script>
   <script src="js/scroll&animasi.js"></script>
 </body>
 </html>
