--- a/1/index.html
+++ b/1/index.html
@@ -93,7 +93,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Ademiando. Mirip Richard Mattka Portfolio - Built with Three.js & GSAP</p>
+        <p>&copy; 2025 ademiando</p>
     </footer>
 
     <!-- Scripts CDN (untuk Modular, load di akhir) -->
