--- a/index.html
+++ b/index.html
@@ -65,7 +65,15 @@
   <nav class="glass-nav">
     <div class="nav-container">
       <div class="logo">
-        <span class="logo-icon"><i class="fas fa-code"></i></span>
+        <span class="logo-icon">
+
+<!-- <i class="fas fa-code"></i> -->
+
+
+  <img src="assets/logo.gif" alt="Logo" style="width:32px; height:auto;">
+
+
+</span>
       </div>
       <ul class="nav-links">
         <li><a href="#hero">Home</a></li>
