--- a/index.html
+++ b/index.html
@@ -122,7 +122,15 @@
   <!-- Portfolio Section -->
   <section id="portfolio" class="section portfolio-section">
     <div class="section-header">
-      <h2><i class="fas fa-globe-asia"></i> Modular Websites</h2>
+      <h2>
+
+  <img src="assets/logo.gif" alt="Logo" style="width:42px; height:auto;">
+
+
+
+<!-- <i class="fas fa-globe-asia"></i> -->
+
+ Modular Websites</h2>
       <p>We design modular, open-source websites built for growth. From startups to enterprises, our architecture empowers you to launch quickly, scale efficiently, and maintain full ownership — without ongoing fees or vendor lock-in.</p>
     </div>
 
