--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="section-header">
       <h2>
 
-  <img src="assets/logo.gif" alt="Logo" style="width:42px; height:auto;">
+  <img src="assets/fork.gif" alt="section-header" style="width:40px; height:auto;">
 
 
 
