--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
   <!-- Portfolio Section -->
   <section id="portfolio" class="section portfolio-section">
     <div class="section-header">
-      <h2>
-  <img src="assets/fork.gif" alt="section-header" style="width:40px; height:auto;"> Modular Websites</h2>
+      <h2><img src="assets/fork.gif" alt="section-header" style="width:40px; height:auto; color:#95ae98;"> Modular Websites</h2>
       <p>We design modular, open-source websites built for growth. From startups to enterprises, our architecture empowers you to launch quickly, scale efficiently, and maintain full ownership — without ongoing fees or vendor lock-in.</p>
     </div>
 
@@ -178,7 +177,7 @@
   <!-- Packages Section -->
   <section id="paket" class="section paket-section">
     <div class="section-header">  
-       <img src="assets/folder.gif" alt="paket" style="width:40px; height:auto;"> Service Packages</h2>
+       <h2><img src="assets/folder.gif" alt="paket" style="width:40px; height:auto;"> Service Packages</h2>
       <p>Choose a package according to your business needs</p>
     </div>
     
