--- a/7/index.html
+++ b/7/index.html
@@ -1,74 +1,147 @@
-import { useState } from "react"; import { motion } from "framer-motion"; import { Canvas } from "@react-three/fiber"; import { OrbitControls, Points, PointMaterial } from "@react-three/drei";
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ade Miando — Portfolio</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: "Helvetica Neue", sans-serif;
+      background: #0d0d0d;
+      color: #f5f5f5;
+      overflow-x: hidden;
+    }
+    canvas#bg {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      width: 100%;
+      height: 100%;
+    }
+    nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      background: rgba(0, 0, 0, 0.3);
+      padding: 1rem 0;
+      z-index: 10;
+      backdrop-filter: blur(10px);
+    }
+    nav a {
+      margin: 0 1rem;
+      text-decoration: none;
+      color: #f5f5f5;
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+    nav a:hover {
+      color: #00c6ff;
+    }
+    section {
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      text-align: center;
+      padding: 3rem 2rem;
+      scroll-snap-align: start;
+    }
+    main {
+      scroll-snap-type: y mandatory;
+      overflow-y: scroll;
+      height: 100vh;
+    }
+    h1, h2 {
+      margin: 0.5rem 0;
+    }
+    p {
+      max-width: 600px;
+      line-height: 1.6;
+    }
+  </style>
+</head>
+<body>
+  <canvas id="bg"></canvas>
 
-const sections = ["Home", "Services", "Lab", "Portfolio", "Projects", "Contact"];
-
-function Background() { const particles = Array.from({ length: 5000 }, () => [ (Math.random() - 0.5) * 10, (Math.random() - 0.5) * 10, (Math.random() - 0.5) * 10, ]);
-
-return ( <Canvas className="fixed inset-0 -z-10"> <ambientLight intensity={0.5} /> <Points positions={particles.flat()} stride={3} frustumCulled> <PointMaterial
-transparent
-color="#ffffff"
-size={0.01}
-sizeAttenuation
-depthWrite={false}
-/> </Points> <OrbitControls enableZoom={false} autoRotate autoRotateSpeed={0.2} /> </Canvas> ); }
-
-export default function App() { const [active, setActive] = useState("Home");
-
-return ( <div className="text-white min-h-screen w-full font-sans scroll-smooth"> {/* Background */} <Background />
-
-{/* Navbar */}
-  <nav className="fixed top-0 left-0 w-full bg-black/40 backdrop-blur-md flex justify-center py-4 z-50">
-    <ul className="flex space-x-8 text-sm uppercase tracking-wide">
-      {sections.map((section) => (
-        <li
-          key={section}
-          className={`cursor-pointer hover:text-gray-300 transition ${
-            active === section ? "text-blue-400" : ""
-          }`}
-          onClick={() => {
-            document.getElementById(section.toLowerCase())?.scrollIntoView({
-              behavior: "smooth",
-            });
-            setActive(section);
-          }}
-        >
-          {section}
-        </li>
-      ))}
-    </ul>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#services">Services</a>
+    <a href="#lab">Lab</a>
+    <a href="#portfolio">Portfolio</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
   </nav>
 
-  {/* Sections */}
-  <main className="pt-20 snap-y snap-mandatory h-screen overflow-y-scroll">
-    {sections.map((section) => (
-      <motion.section
-        key={section}
-        id={section.toLowerCase()}
-        className="snap-start min-h-screen flex flex-col justify-center items-start px-6 max-w-4xl mx-auto"
-        initial={{ opacity: 0, y: 50 }}
-        whileInView={{ opacity: 1, y: 0 }}
-        viewport={{ once: true }}
-        transition={{ duration: 0.8 }}
-      >
-        <h1 className="text-5xl font-bold mb-6">{section}</h1>
-        <p className="text-lg text-gray-300 max-w-2xl leading-relaxed">
-          {section === "Home" &&
-            "Welcome to my personal space. I build digital experiences with passion and precision."}
-          {section === "Services" &&
-            "Offering professional web development, UI/UX design, and scalable solutions."}
-          {section === "Lab" &&
-            "A playground for experiments, exploring the latest in web technologies."}
-          {section === "Portfolio" &&
-            "Showcasing selected works that represent my skills and creativity."}
-          {section === "Projects" &&
-            "A collection of projects I have worked on, both personal and collaborative."}
-          {section === "Contact" &&
-            "Feel free to reach out for collaborations, inquiries, or just to say hello."}
-        </p>
-      </motion.section>
-    ))}
+  <main>
+    <section id="home">
+      <h1>Welcome</h1>
+      <p>Hi, I'm Ade Miando. A creator, builder, and explorer of ideas. This is my digital space where technology meets creativity.</p>
+    </section>
+
+    <section id="services">
+      <h2>Services</h2>
+      <p>I provide premium web development, interactive design, and digital strategy to help you craft elegant online experiences.</p>
+    </section>
+
+    <section id="lab">
+      <h2>Lab</h2>
+      <p>The Lab is my experimental ground, where I explore new technologies, WebGL animations, and creative coding projects.</p>
+    </section>
+
+    <section id="portfolio">
+      <h2>Portfolio</h2>
+      <p>A curated showcase of my works — from websites to interactive experiences, all built with precision and passion.</p>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+      <p>Here are ongoing and upcoming projects that reflect my journey, innovation, and collaborative work with others.</p>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Let's connect! Reach out for collaborations, freelance work, or just to say hello. I’d love to hear from you.</p>
+    </section>
   </main>
-</div>
 
-); }
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script>
+    // Simple WebGL animated background with Three.js
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+    const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById("bg"), antialias: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    camera.position.z = 5;
 
+    const geometry = new THREE.TorusKnotGeometry(1, 0.3, 100, 16);
+    const material = new THREE.MeshStandardMaterial({ color: 0x00c6ff, metalness: 0.7, roughness: 0.2 });
+    const torusKnot = new THREE.Mesh(geometry, material);
+    scene.add(torusKnot);
+
+    const pointLight = new THREE.PointLight(0xffffff, 1);
+    pointLight.position.set(5, 5, 5);
+    scene.add(pointLight);
+
+    function animate() {
+      requestAnimationFrame(animate);
+      torusKnot.rotation.x += 0.01;
+      torusKnot.rotation.y += 0.01;
+      renderer.render(scene, camera);
+    }
+    animate();
+
+    window.addEventListener("resize", () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
+  </script>
+</body>
+</html>
