--- a/8/index.html
+++ b/8/index.html
@@ -153,7 +153,7 @@
 
         loader.load(
             // --- GANTI URL INI dengan URL model .glb Anda ---
-            'https://storage.googleapis.com/ademiando/tropical_island.glb',
+            'mountain_landscape.glb',
             function (gltf) {
                 loadedModel = gltf.scene;
                 
